--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -88,6 +88,13 @@
       }
     }
 
+    .user-profile {
+      img {
+        height: 50px;
+        border-radius: 100%;
+      }
+    }
+
     /*=========================
     `Mobile Nav
     ============================*/
