--- a/src/components/CardNowShow/index.scss
+++ b/src/components/CardNowShow/index.scss
@@ -9,7 +9,7 @@
   &-img {
     margin: auto;
     padding: 15px;
-    border: 3px solid white;
+    border: 3px solid $white;
     height: 280px;
     width: 195px;
     object-fit: cover;
