--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -3,6 +3,8 @@
 
 /*====== Footer ======*/
 #footer {
+  padding-top: 50px;
+  background-color: $white;
   margin-top: 100px;
   .footer {
     margin-top: 70px;
