--- a/src/layout/UpComing/index.scss
+++ b/src/layout/UpComing/index.scss
@@ -10,6 +10,11 @@
     }
   }
 
+  h5 {
+    cursor: pointer;
+    color: $purple;
+  }
+
   .upcoming-button {
     .upcoming-button-month {
       width: 120px;
