--- a/src/components/CardMovieSchedule/index.scss
+++ b/src/components/CardMovieSchedule/index.scss
@@ -1,7 +1,8 @@
 @import "../../assets/scss/variable.scss";
 
 .movie-schedule-card {
-  border: 0.5px solid $gray-200;
+  border: 0.2px solid $gray-200;
+  box-shadow: 0px 8px 24px rgba(17, 17, 17, 0.05);
   padding: 15px;
   border-radius: 10px;
   margin-bottom: 15px;
@@ -18,6 +19,7 @@
 
   .time-available {
     .time {
+      cursor: pointer;
       padding: 7px;
 
       .now-play {
@@ -33,10 +35,14 @@
       .availble {
         color: #14142b;
       }
+      .selected {
+        color: $white;
+        background-color: $gray-400;
+        border-radius: 5px;
+      }
     }
   }
 
   &:hover {
-    box-shadow: 0px 8px 24px rgba(17, 17, 17, 0.08);
   }
 }
