Create reducer movie

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -125,6 +125,8 @@
 
       img {
         height: 50px;
+        width: 50px;
+        object-fit: cover;
         border-radius: 100%;
       }
     }
