--- a/src/layout/ProfileInfo/index.scss
+++ b/src/layout/ProfileInfo/index.scss
@@ -17,8 +17,8 @@
   .photo-profile {
     img {
       border-radius: 100%;
-      max-height: 150px;
-      max-width: 150px;
+      height: 150px;
+      width: 150px;
       object-fit: cover;
     }
 
